# pyETL

./: README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
config/: config.py  spark_config.py
src/database/: connection.py
src/extract/: claims_extractor.py  extractors.py  fact_data_extractor.py  master_data_extractor.py  spark_extractor.py
src/load/: loaders.py
src/models/: claims.py
src/pipeline/: etl_pipeline.py
src/transform/: claims_transformer.py  fact_transformer.py  transformers.py
tests/: conftest.py  test_connection.py  test_extractors.py  test_integration.py  test_loaders.py  test_transformers.py
utils/: helpers.py
